--- a/style/welcome.scss
+++ b/style/welcome.scss
@@ -59,6 +59,7 @@
         font-size: 22px;
         line-height: 40px;
         .welcome-slider-io-metadata {
+          transform: translateX(5px);
           width: 76px;
           height: 40px;
           color: white;
